--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<HTML lang="en">
 
-<!-- Coded By Joseph Hughes -->
+<!--
+		Coded By Joseph Hughes | https//www.linkedin.com/in/joseph-hughes-34955a141
+-->
 
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -329,10 +331,6 @@
             </div>
 
         </div>
-
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-
     </div>
 
 </section>
